2003-05-06  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/jsutils.py: added simple module for marshalling
	literal Python data into Javascript.

2003-05-06    <drew@loki.sai-office>

	* docs/opman/opman.tex: added Frank's MailServices update and made
	a few other changes.

2003-05-05  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/SkunkExcept.py (SkunkSyntaxError.format): stopped
	building up strings through multiple concatenations.

2003-05-05    <drew@loki.sai-office>

	* SkunkWeb/Services/templating/MailServices.py: big and better update
	from Frank Tegtmeyer

2003-05-04  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyPgSQLcache.py: typo fixes.

	* SkunkWeb/Services/pypgsqlcache.py: typo fix.

2003-05-02    <drew@loki.sai-office>

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.response): 
	fix for stupidity error

2003-05-02  Jacob Smullyan  <jsmullyan@wnyc.org>

	* INSTALL (systems): added to list of supported OSes.

2003-05-02    <drew@loki.sai-office>

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.response): now 
	supports byte range requests.

	* SkunkWeb/sw.conf.in: added the long unmentioned 
	mergeQueryStringWithPostData option as well as textCompression
	and generateEtagHeader.

	* SkunkWeb/Services/templating/Handler.py (plainHandler): added 
	Last-Modified header and checking

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.response): 
	added configurable gzip compression of text types and generation
	of etag headers

	* README: removed license interpretation paragraph copied from -ack-
	Perl

	* SkunkWeb/Makefile.in: fix for swpython.c, installs precompile.py
	
	* SkunkWeb/precompile.py.in: added
	
	* SkunkWeb/configure: regenerated
	
	* SkunkWeb/configure.in: added stuff for util/precompile.py
	
	* SkunkWeb/swpython.c.in: added and fixed

	* SkunkWeb/swpython.c: removed, added wrong file
	
	* SkunkWeb/swpython.py.in (else): fixed sys.argv handling
